fixed bugs for deploying

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Namaste React</title>
+    <title>Food Point</title>
     <link rel="stylesheet" href="index.css" />
     <link rel="icon" href="https://logo.com/image-cdn/images/kts928pd/production/7ab5def0ab1dad26a90bc35cb7eed9e628f7f201-430x430.png?w=1080&q=72" />
      <script src="https://kit.fontawesome.com/0d6799dc23.js" crossorigin="anonymous"></script>
   </head>
   <body>
     
-    <div id="root">Not Rendered</div>
+    <div id="root"></div>
 
     <script type="module" src="src/App.js"></script>
   </body>
